fix: something forcing scrollbars
I think it may be p5, but overflow hidden does the trick

--- a/web/index.sass
+++ b/web/index.sass
@@ -5,6 +5,7 @@ body,
   height: 100vh
   margin: 0
   padding: 0
+  overflow: hidden
 
 body
   background: #000000ff
